<resources>
    <string name="app_name">FoodRecipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke_fragment">Joke</string>
    <string name="recipes_fragment_label">Recipes</string>
    <string name="favorites_fragment_label">Favorites</string>
    <string name="joke_fragment_label">Food Joke</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="select_recipe_img_label">Select Recipe</string>
    <string name="error_image_label">Error Image</string>
    <string name="fav_icon">Fav Icon</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="eco_image_view">Eco Image View</string>
    <string name="clock_image_view">Clock Image View</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="vegan">Vegan</string>
</resources>