<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.daniyarjakupov.foodrecipes.ui.fragments.recipes.RecipesFragment"
        android:label="@string/recipes_fragment_label"
        tools:layout="@layout/fragment_recipes" />
    <fragment
        android:id="@+id/favRecipesFragment"
        android:name="com.daniyarjakupov.foodrecipes.ui.fragments.favs.FavRecipesFragment"
        android:label="@string/favorites_fragment_label"
        tools:layout="@layout/fragment_fav_recipes" />
    <fragment
        android:id="@+id/foodJokeFragment"
        android:name="com.daniyarjakupov.foodrecipes.ui.fragments.foodjoke.FoodJokeFragment"
        android:label="@string/joke_fragment_label"
        tools:layout="@layout/fragment_food_joke" />
</navigation>